2009-11-18  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-version): Bump to 5.31.8.

2009-11-17  Jan Djärv  <jan.h.d@swipnet.se>

	* font-setting.el (font-use-system-font): Moved ...

	* cus-start.el (all): ... to here.

2009-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-advice-file-expand-wildcards): Simplify.
	Don't set `ad-return-value' if `ad-do-it' doesn't.

	* net/tramp-gvfs.el (tramp-gvfs-handle-write-region): Set file
	modification time.

2009-11-17  Jan Djärv  <jan.h.d@swipnet.se>

	* menu-bar.el: Put "Use system font" in Option-menu.
	(menu-bar-options-save): Add font-use-system-font.

	* loadup.el: If feature system-font-setting or font-render-setting is
	there, load font-setting.

	* Makefile.in (ELCFILES): font-settings.el is new.
	* font-setting.el: New file.

2009-11-17  Glenn Morris  <rgm@gnu.org>

	* vc-svn.el (vc-svn-print-log): Fix typo in previous.

	* net/newst-treeview.el (newsticker--treeview-list-update-faces):
	Preserve point in the list buffer.  (Bug#4939)
	Use point-at-eol.
	(newsticker--treeview-list-update-highlight)
	(newsticker--treeview-tree-update-highlight): Use point-at-bol/eol.

2009-11-16  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-bin.el (math-symclip, calcFunc-symclip, calc-symclip):
	Remove.

	* calc/calc-ext.el (calc-init-extensions): Remove references to
	symclip.

	* calc/calc-menu.el (calc-arithmetic-menu): Remove `calc-symclip'.

	* calc/calc-map.el (calc-get-operator, calc-b-oper-keys):
	* calc/calc-help.el (calc-b-prefix-help):  Remove references to
	`calc-symclip'.

2009-11-16  Kevin Ryde  <user42@zip.com.au>

	* textmodes/flyspell.el (sgml-mode-flyspell-verify): Use
	`sgml-lexical-context' instead of own parse for tag.  (Further to
	Bug#4511).

	* emacs-lisp/lisp-mnt.el (lm-keywords): Allow multi-line keywords.
	(lm-keywords-list): Allow comma-only separator like "foo,bar".
	Ignore trailing spaces by omit-nulls to split-string (fixing